Fix contrast problems

--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -1,7 +1,3 @@
 .welcomeUser {
   margin-top: 85px;
-
-  #loggedUserName {
-    color: $tertiary-color;
-  }
 }
